--- a/qdrant-landing/themes/qdrant/static/css/helpers/_mixins.scss
+++ b/qdrant-landing/themes/qdrant/static/css/helpers/_mixins.scss
@@ -39,3 +39,11 @@
     text-align: center;
   }
 }
+
+@mixin transitionAll($ms) {
+  -webkit-transition: all $ms ease;
+  -ms-transition: all $ms ease;
+  -o-transition: all $ms ease;
+  -moz-transition: all $ms ease;
+  transition: all $ms ease;
+}
