--- a/qdrant-landing/themes/qdrant/layouts/solutions/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/solutions/list.html
@@ -13,8 +13,13 @@
                 <div class="news-block-two">
                     <div class="inner-box inner-box_pb">
                         <div class="upper-box">
-                            <h4><a href="{{ .Params.default_link }}">{{ .Title }}</a></h4>
-                            <!-- <div class="category">{{ .Params.subtitle }}</div> -->
+                            <h4>
+                                {{ if .Params.default_link }}
+                                <a href="{{ .Params.default_link }}">{{ .Title }}</a>
+                                {{ else }}
+                                    {{ .Title }}
+                                {{ end }}
+                            </h4>
                         </div>
                         <div class="image">
                             {{ if .Params.default_link }}
@@ -26,9 +31,6 @@
                         <div class="lower-box">
                             <p>{{ .Params.short_description | markdownify }}</p>
                         </div>
-                        <a href="{{ .Site.Params.mailchimp_contact_form }}" target="_blank" class="theme-btn btn-style-five btn-small">
-                            <span class="txt">Contact Us</span>
-                        </a>
                     </div>
                 </div>
             </div>
