slower speed of the carousel on the main page

--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -119,6 +119,7 @@ docker run -p 6333:6333 qdrant/qdrant</code>
                "loop": true,
                "autoplay": true,
                "interval": 3000,
+               "speed": 1000,
                "pauseOnHover": true,
                "pauseOnFocus": false,
                "arrows":  false,
