content changes + seach upd

--- a/qdrant-landing/themes/qdrant/layouts/partials/js.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/js.html
@@ -67,7 +67,7 @@
 
     // qdrant-page-search initialization
     if (/documentation/.test(window.location?.pathname)) {
-      window.initQdrantSearch({searchApiUrl: 'https://search.qdrant.tech/api/search'});
+      window.initQdrantSearch({searchApiUrl: 'https://search.qdrant.tech/api/search', section: "documentation"});
     }
   });
 </script>
