--- a/qdrant-landing/themes/qdrant/layouts/pricing/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/pricing/list.html
@@ -109,7 +109,7 @@
                             <span class="txt">Contact sales</span>
                         </a>
                         <ul class="price-list">
-                            <li>Performance & Deployment Consulting
+                            <li>Performance & Deployment
                                 <a class="a" role="note" tabindex="0"
                                 data-container="body" data-toggle="popover" data-placement="right"
                                 data-trigger="focus" title="Performance & Deployment"
@@ -118,7 +118,7 @@
                                 </a>
                             </li>
                             <li>
-                                Neural Network Encoder Fine-Tuning
+                                Neural Network Fine-Tuning
                                 <a class="a" role="note" tabindex="0"
                                 data-container="body" data-toggle="popover" data-placement="right"
                                 data-trigger="focus" title="Fine-Tuning"
@@ -127,7 +127,7 @@
                                 </a>
                             </li>
                             <li>
-                                Migration and Monitoring Tools
+                                Migration and Monitoring
                                 <a class="a" role="note" tabindex="0"
                                 data-container="body" data-toggle="popover" data-placement="right"
                                 data-trigger="focus" title="Migration and Monitoring"
