--- a/qdrant-landing/themes/qdrant/static/css/blocks/_buttons.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_buttons.scss
@@ -33,7 +33,7 @@
       -webkit-transition-timing-function: cubic-bezier(0.860, 0.000, 0.070, 1.000);
       transition-timing-function: cubic-bezier(0.860, 0.000, 0.070, 1.000);
       -ms-transform: scale(0, 1);
-      -webkit-transform: scale(0, 1);
+      -webkit-transform: scale(0, 1) translate3d(0, 0, 0);
       transform: scale(0, 1);
       -ms-transform-origin: top right;
       -webkit-transform-origin: top right;
@@ -47,7 +47,7 @@
       &:before {
         display: block;
         -ms-transform: scale(1, 1);
-        -webkit-transform: scale(1, 1);
+        -webkit-transform: scale(1, 1) translate3d(0, 0, 0);
         transform: scale(1, 1);
         -ms-transform-origin: bottom left;
         -webkit-transform-origin: bottom left;
@@ -142,14 +142,14 @@
     -o-transition: all 0.4s;
     -webkit-transition: all 0.4s;
     transition: all 0.4s;
-    -webkit-transform: scale(1, 0.5);
+    -webkit-transform: scale(1, 0.5) translate3d(0, 0, 0);
     transform: scale(1, 0.5);
     opacity: 0;
     background-color: #ffffff;
   }
 
   &:hover::before {
-    -webkit-transform: scale(1, 1);
+    -webkit-transform: scale(1, 1) translate3d(0, 0, 0);
     transform: scale(1, 1);
     opacity: 1;
   }
@@ -193,7 +193,7 @@
     -webkit-transition-timing-function: cubic-bezier(0.860, 0.000, 0.070, 1.000);
     transition-timing-function: cubic-bezier(0.860, 0.000, 0.070, 1.000);
     -ms-transform: scale(0, 1);
-    -webkit-transform: scale(0, 1);
+    -webkit-transform: scale(0, 1) translate3d(0, 0, 0);
     transform: scale(0, 1);
     -ms-transform-origin: top right;
     -webkit-transform-origin: top right;
@@ -203,7 +203,7 @@
 
   &:hover::before {
     -ms-transform: scale(1, 1);
-    -webkit-transform: scale(1, 1);
+    -webkit-transform: scale(1, 1) translate3d(0, 0, 0);
     transform: scale(1, 1);
     -ms-transform-origin: bottom left;
     -webkit-transform-origin: bottom left;
@@ -264,7 +264,7 @@
     -webkit-transition-timing-function: cubic-bezier(0.860, 0.000, 0.070, 1.000);
     transition-timing-function: cubic-bezier(0.860, 0.000, 0.070, 1.000);
     -ms-transform: scale(0, 1);
-    -webkit-transform: scale(0, 1);
+    -webkit-transform: scale(0, 1) translate3d(0, 0, 0);
     transform: scale(0, 1);
     -ms-transform-origin: top right;
     -webkit-transform-origin: top right;
@@ -274,7 +274,7 @@
 
   &:hover::before {
     -ms-transform: scale(1, 1);
-    -webkit-transform: scale(1, 1);
+    -webkit-transform: scale(1, 1) translate3d(0, 0, 0);
     transform: scale(1, 1);
     -ms-transform-origin: bottom left;
     -webkit-transform-origin: bottom left;
@@ -329,7 +329,7 @@
     -webkit-transition-timing-function: cubic-bezier(0.860, 0.000, 0.070, 1.000);
     transition-timing-function: cubic-bezier(0.860, 0.000, 0.070, 1.000);
     -ms-transform: scale(0, 1);
-    -webkit-transform: scale(0, 1);
+    -webkit-transform: scale(0, 1) translate3d(0, 0, 0);
     transform: scale(0, 1);
     -ms-transform-origin: top right;
     -webkit-transform-origin: top right;
@@ -340,7 +340,7 @@
 
   &:hover::before {
     -ms-transform: scale(1, 1);
-    -webkit-transform: scale(1, 1);
+    -webkit-transform: scale(1, 1) translate3d(0, 0, 0);
     transform: scale(1, 1);
     -ms-transform-origin: bottom left;
     -webkit-transform-origin: bottom left;
@@ -448,7 +448,7 @@
     -webkit-transition-timing-function: cubic-bezier(0.860, 0.000, 0.070, 1.000);
     transition-timing-function: cubic-bezier(0.860, 0.000, 0.070, 1.000);
     -ms-transform: scale(0, 1);
-    -webkit-transform: scale(0, 1);
+    -webkit-transform: scale(0, 1) translate3d(0, 0, 0);
     transform: scale(0, 1);
     -ms-transform-origin: top right;
     -webkit-transform-origin: top right;
@@ -458,7 +458,7 @@
 
   &:hover::before {
     -ms-transform: scale(1, 1);
-    -webkit-transform: scale(1, 1);
+    -webkit-transform: scale(1, 1) translate3d(0, 0, 0);
     transform: scale(1, 1);
     -ms-transform-origin: bottom left;
     -webkit-transform-origin: bottom left;
