--- a/qdrant-landing/themes/qdrant/static/css/blocks/_prices-page.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_prices-page.scss
@@ -17,6 +17,11 @@
   h4 {
     font-weight: 400;
   }
+  .sec-title .theme-btn .txt {
+    @include media-breakpoint-down(sm) {
+      font-size: 18px;
+    }
+  }
 }
 
 .price-block {
