--- a/qdrant-landing/themes/qdrant/static/css/blocks/_hero-code.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_hero-code.scss
@@ -5,7 +5,7 @@
 .hero-code {
   display: none;
   margin-bottom: 1rem;
-  padding: 0.7rem 1rem;
+  padding: 1rem;
   position: relative;
   border-radius: 5px;
   background: var(--brand-light-grey);
