text adjustments and cloud terms

--- a/qdrant-landing/themes/qdrant/layouts/partials/header.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/header.html
@@ -5,7 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-        {{ if and ($.IsNode) (eq $.Section "") }}
+        {{ if .Params.Page_title }}
+        <title>{{ .Params.Page_title }} - Qdrant</title>
+        {{ else if and ($.IsNode) (eq $.Section "") }}
         <title>{{ .Title }}</title>
         {{ else }}
         <title>{{ .Title }} - Qdrant</title>
