--- a/qdrant-landing/themes/qdrant/layouts/partials/docs_sidebar.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/docs_sidebar.html
@@ -1,5 +1,8 @@
 {{$currentNode := .}}
 <nav class="col-lg-3 col-md-3 col-12 mt-0 mt-md-4 mr-3 mb-4 position-relative">
+
+    {{ $sectionLink := cond .IsSection .RelPermalink .Parent.RelPermalink }}
+    {{ $subject := site.GetPage $sectionLink }}
     <div id="accordion" class="sticky-top documentation__sidebar">
         <!-- Button trigger modal -->
         <button type="button" class="qdr-search-input-btn w-100 mb-2" data-target="#searchModal">
@@ -7,7 +10,7 @@
         </button>
 
         <div class="documentation__sidebar-list">
-            {{ range where .Site.RegularPages "Section" .Section }}
+            {{ range $subject.RegularPages }}
             <div class="link-group {{ if eq .File.UniqueID $currentNode.File.UniqueID }}active {{ end }}">
                 <div class="link-group-heading" id="headingOne">
                 <span class="mb-0">
