--- a/qdrant-landing/themes/qdrant/static/css/blocks/_buttons.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_buttons.scss
@@ -91,6 +91,20 @@
   &.disabled {
     display: none;
   }
+
+  // backgrounds
+  &.btn--primary {
+    background-color: var(--brand-primary);
+  }
+  &.btn--secondary {
+    background-color: var(--brand-secondary);
+  }
+  &.btn--light {
+    background-color: var(--brand-light);
+  }
+  &.btn--mid-grey {
+    background-color: var(--brand-mid-grey);
+  }
 }
 
 .fixed-header .btn_in-header {
