--- a/qdrant-landing/themes/qdrant/layouts/partials/footer.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/footer.html
@@ -84,7 +84,7 @@
             <li><a href="{{ .Site.Params.linkedin }}" target="_blank"><i class="fab fa-linkedin"></i></a></li>
             <li><a href="{{ .Site.Params.twitter }}" target="_blank"><i class="fab fa-twitter"></i></a></li>
             <li><a href="{{ .Site.Params.discord }}" target="_blank"><i class="fab fa-discord"></i></a></li>
-            <li><a href="{{ .Site.Params.facebook }}" target="_blank"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="{{ .Site.Params.youtube }}" target="_blank"><i class="fab fa-youtube"></i></a></li>
         </ul>
 
     </div>
