--- a/qdrant-landing/themes/qdrant/layouts/documentation/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/documentation/single.html
@@ -1,9 +1,10 @@
 {{ define "main" }}
+{{ $isCloud := cond (in .Parent.RelPermalink "cloud") true false }}
 
 <div class="col-12 col-md-8 col-11 pb-5">
     <div style="overflow: auto">
         <span style="float: right">
-            <a href="{{ .Site.Params.githubDocPrefix }}{{ .File.LogicalName }}" target="_blank" >Edit on GitHub <i class="flaticon-github"></i></a>
+            <a href="{{if $isCloud}}{{ .Site.Params.githubCloudDocPrefix }}{{else}}{{ .Site.Params.githubDocPrefix }}{{end}}{{ .File.LogicalName }}" target="_blank">Edit on GitHub <i class="flaticon-github"></i></a>
         </span>
     </div>
 
