--- a/qdrant-landing/themes/qdrant/layouts/partials/docs_sidebar.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/docs_sidebar.html
@@ -8,8 +8,8 @@
         <!-- buttons for Qdrant/Cloud doc switching-->
         {{ $isCloud := cond (in $sectionLink "cloud") true false }}
         <div class="btn-group btn-group-sm w-100 mb-3" role="group" aria-label="...">
-            <a class="btn {{if $isCloud}}btn--light{{else}}btn--mid-grey{{end}}" href="/documentation/">Qdrant</a>
-            <a class="btn {{if $isCloud}}btn--mid-grey{{else}}btn--light{{end}}" href="/documentation/cloud/">Cloud</a>
+            <a class="btn {{if $isCloud}}btn--light{{else}}btn--mid-grey font-weight-bold{{end}}" href="/documentation/">Qdrant</a>
+            <a class="btn {{if $isCloud}}btn--mid-grey font-weight-bold{{else}}btn--light{{end}}" href="/documentation/cloud/">Cloud</a>
         </div>
         <!-- Button triggers search modal -->
         <button type="button" class="qdr-search-input-btn w-100 mb-2 w-100" data-target="#searchModal">
