scrollbar styles for docs sidebar

--- a/qdrant-landing/themes/qdrant/layouts/partials/docs_sidebar.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/docs_sidebar.html
@@ -1,8 +1,8 @@
 {{$currentNode := .}}
-<nav class="col-lg-3 col-md-3 col-12 mt-0 mt-md-4 position-relative">
+<nav class="col-lg-3 col-md-3 col-12 mt-0 mt-md-4 mr-3 mb-4 position-relative">
     <div id="accordion" class="sticky-top documentation__sidebar">
         <!-- Button trigger modal -->
-        <button type="button" class="qdr-search-input-btn mb-2" data-target="#searchModal">
+        <button type="button" class="qdr-search-input-btn w-100 mb-2" data-target="#searchModal">
             <i class="fa fa-search mr-2"></i>Search...
         </button>
 
