Subsection for cloud documentation (#98)
* changed docs sidebar and breadcrumbs so it would work with subsections as well

* buttons to switch between qdrant and cloud documentation

* changed a link for editting on github for cloud doc pages

* docs auto-sync

* bold text on an active button

* update of sync script

* docs auto-sync

* temporary use other branch for sync

* temporary use other branch for sync

* temporary use other branch for sync

* temporary use other branch for sync

* docs auto-sync

* temporary use other branch for sync

* temporary use other branch for sync

* temporary use other branch for sync

* docs auto-sync

* styles

* docs auto-sync

Co-authored-by: qdrant <qdrant@users.noreply.github.com>
Co-authored-by: Andrey Vasnetsov <andrey@vasnetsov.com>

--- a/qdrant-landing/themes/qdrant/static/css/blocks/_buttons.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_buttons.scss
@@ -91,6 +91,24 @@
   &.disabled {
     display: none;
   }
+
+  // backgrounds
+  &.btn--primary {
+    background-color: var(--brand-primary);
+    color: var(--white);
+  }
+  &.btn--secondary {
+    background-color: var(--brand-secondary);
+    color: var(--white);
+  }
+  &.btn--light {
+    background-color: var(--brand-light);
+    color: var(--brand-secondary);
+  }
+  &.btn--mid-grey {
+    background-color: var(--brand-mid-grey);
+    color: var(--brand-secondary);
+  }
 }
 
 .fixed-header .btn_in-header {
