--- a/qdrant-landing/themes/qdrant/layouts/pricing/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/pricing/list.html
@@ -80,7 +80,7 @@
                         </div>
                         <div class="text">Scale your production solutions in the managed cloud without deployment and maintenance overhead.
                         </div>
-                        <a href="/surveys/cloud-request/" class="theme-btn btn-style-five btn-small w-100">
+                        <a href="{{ .Site.Params.cloud }}" class="theme-btn btn-style-five btn-small w-100">
                             <span class="txt">Join Cloud Beta</span>
                         </a>
                         <ul class="price-list">
