--- a/qdrant-landing/themes/qdrant/layouts/pricing/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/pricing/list.html
@@ -75,8 +75,8 @@
                     <div class="title">Managed Cloud</div>
                     <div class="content-box">
                         <div class="price-box">
-                            <span class="icon flaticon-skyline"></span> Pay as You Go
-                            <span class="price-title">Per pod/hour</span>
+                            <span class="icon flaticon-skyline"></span> Srarting from $25
+                            <span class="price-title">Per pod/month billed hourly</span>
                         </div>
                         <div class="text">Scale your production solutions in the managed cloud without deployment and maintenance overhead.
                         </div>
@@ -89,6 +89,7 @@
                             </li>
                             <li>Turnkey Data Migration</li>
                             <li>Expert Support</li>
+                            <li>Free Tier Available</li>
                         </ul>
                     </div>
                 </div>
