remove an item to make blocks even

--- a/qdrant-landing/themes/qdrant/layouts/pricing/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/pricing/list.html
@@ -85,11 +85,10 @@
                         </a>
                         <ul class="price-list">
                             <li>Managed & Monitored by Us</li>
-                            <li>High Availability & Performance
-                            </li>
-                            <li>Turnkey Data Migration</li>
+                            <li>High Availability & Performance</li>
+                            <!-- <li>Turnkey Data Migration</li> -->
                             <li>Expert Support</li>
-                            <li>Free Tier Available</li>
+                            <li>Free Tier available</li>
                         </ul>
                     </div>
                 </div>
