--- a/qdrant-landing/themes/qdrant/layouts/pricing/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/pricing/list.html
@@ -75,20 +75,20 @@
                     <div class="title">Managed Cloud</div>
                     <div class="content-box">
                         <div class="price-box">
-                            <span class="icon flaticon-skyline"></span> Pay as You Go
-                            <span class="price-title">Per pod/hour</span>
+                            <span class="icon flaticon-skyline"></span> Srarting from $25
+                            <span class="price-title">Per pod/month billed hourly</span>
                         </div>
                         <div class="text">Scale your production solutions in the managed cloud without deployment and maintenance overhead.
                         </div>
-                        <a href="/surveys/cloud-request/" class="theme-btn btn-style-five btn-small w-100">
+                        <a href="{{ .Site.Params.cloud }}" class="theme-btn btn-style-five btn-small w-100">
                             <span class="txt">Join Cloud Beta</span>
                         </a>
                         <ul class="price-list">
                             <li>Managed & Monitored by Us</li>
-                            <li>High Availability & Performance
-                            </li>
-                            <li>Turnkey Data Migration</li>
+                            <li>High Availability & Performance</li>
+                            <!-- <li>Turnkey Data Migration</li> -->
                             <li>Expert Support</li>
+                            <li>Free Tier available</li>
                         </ul>
                     </div>
                 </div>
