seo text changes, also removed obsolete langauge switch

--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -110,7 +110,7 @@ docker run -p 6333:6333 qdrant/qdrant</code>
       </div>
       <div class="inner-container">
         <!-- Business Info Tabs -->
-        <div class="business-info-tabs splide" aria-label="How Qdrant can help your Business"
+        <div class="business-info-tabs splide" aria-label="How Qdrant vector database can help your Business"
               data-splide='{
               "direction": "ttb",
                "type": "loop",
