--- a/qdrant-landing/themes/qdrant/layouts/partials/contact-section.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/contact-section.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-12 sec-title">
                 <h2>Get Updates from Qdrant</h2>
-                <div class="text">We will update you on new features and news regarding Qdrant
+                <div class="text">We will update you on new features and news regarding Qdrant and Vector Similarity Search
                 </div>
             </div>
             <div class="content-column col-12">
