--- a/qdrant-landing/themes/qdrant/layouts/benchmarks/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/benchmarks/list.html
@@ -30,6 +30,14 @@
             </div>
             {{ end }}
 
+            {{ if .Params.filter_data }}
+            <div class="row clearfix">
+                <section class="content-side col-lg-12 col-md-12 col-sm-12">
+                    {{ partial "benchmark_filter_chart" . }}
+                </section>
+            </div>
+            {{ end }}
+
 
             <article class="article article_benchmarks article_narrow">
                 {{ .Content }}
