fix: fix plot preselect

--- a/qdrant-landing/themes/qdrant/layouts/partials/benchmark_filter_chart.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/benchmark_filter_chart.html
@@ -28,7 +28,7 @@
 
 
 <script type="module">
-  let defaultPlotValue = "{{ .Params.filter_data}}" || "rps";
+  let defaultPlotValue = "{{ .Params.default_plot}}" || "rps";
   let url = "{{ .Params.filter_data }}";
 
   const config = {
