debug: debug js

--- a/qdrant-landing/themes/qdrant/layouts/partials/benchmark_filter_chart.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/benchmark_filter_chart.html
@@ -68,7 +68,7 @@
       }
 
       let cleanedDatasets = [...cleanedDatasetsSet];
-      updateDropdown(datasetSelector, cleanedDatasets);
+      updataDropdown(datasetSelector, cleanedDatasets);
 
       window.datasets = { "{{ .Params.id }}": data, ...window.datasets }
       window.charts = { "{{ .Params.id }}": chart, ...window.charts }
