debug: add benchmark filter search script to header

--- a/qdrant-landing/themes/qdrant/layouts/partials/header.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/header.html
@@ -68,6 +68,7 @@
         {{ if eq .Section "benchmarks" }}
           <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
           <script src="{{ "js/benchmarks.js" | absURL }}"></script>
+          <script src="{{ "js/benchmarks_filtered_search.js" | absURL }}"></script>
         {{ end }}
 
         <script src="/js/qdr-scroll.min.js" type="module"></script>
