new: sort dataset labels

--- a/qdrant-landing/themes/qdrant/layouts/partials/benchmark_filter_chart.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/benchmark_filter_chart.html
@@ -67,7 +67,7 @@
         cleanedDatasetsSet.add(dataset.replace('-no-filters', '').replace('-filters', ''));
       }
 
-      let cleanedDatasets = [...cleanedDatasetsSet];
+      let cleanedDatasets = [...cleanedDatasetsSet].sort();
       updataDropdown(datasetSelector, cleanedDatasets);
 
       window.datasets = { "{{ .Params.id }}": data, ...window.datasets }
